<resources>
    <string name="app_name">Only the body</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mnu_clear">Clear Workouts</string>
    <string name="mnu_save">Save poster</string>
    <string name="mnu_share">Share</string>
    <string name="mnu_counter">Counter</string>
    <string name="mnu_website">Website</string>
    <string name="mnu_rate">Rate app</string>
    <string name="mnu_about">About</string>
    <string name="mnu_help">Help</string>
    <string name="mnu_timer">Timer</string>
    <string name="mnu_mark">Mark workout</string>
    <string name="share_title">All bodyweight workouts - Android app</string>
    <string name="share_URL">https://play.google.com/store/apps/details?id=com.greenbotapps.onlythebody</string>
    <string name="share_msg">Share app!</string>
    <string name="err_nointernet">No Internet connection</string>
    <string name="about_title">Programming</string>
    <string name="about_message">By Jack, 2014 - %1$d;\nWorkouts: %2$d;\nCode version: %3$d.</string>
    <string name="about_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cmd1">Start</string>
    <string name="cmd2">Stop</string>
    <string name="cmd3">Reset</string>
    <string name="mark_lavel">Mark your current level</string>
    <string name="a1">Set ALL workouts to \nNot started yet?</string>
    <string name="a2">Are you sure?</string>
    <string name="a3">Yes</string>
    <string name="a4">Nope</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for workout</string>
    <string name="file_save">Saved as:</string>
    <string name="file_save_error">Error saving poster</string>
    <string name="new_title">What is new</string>
    <string name="new_message">- à la guerre comme à la guerre;\n- Counter added;\n- Animation added;\n- UI improved;\n- You can save workouts image;\n- Navigation Drawer image added;\n- Workout counter in About dialog;</string>
    <string-array name="level">
        <item><![CDATA[<font color="#ffffff">Not started yet</font>]]></item>
        <item><![CDATA[<font color="#ff0000">Level 1 done</font>]]></item>
        <item><![CDATA[<font color="#ffff00">Level 2 done</font>]]></item>
        <item><![CDATA[<font color="#00ff00">Level 3 done</font>]]></item>
    </string-array>
</resources>