<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.greenbotapps.onlythebody.MainActivity" >
    <item
        android:id="@+id/mnu_main"
        android:icon="@drawable/ic_more"
        android:showAsAction="always"
        android:title="@string/mnu_help">
        <menu>
            <item
                android:id="@+id/action_manage"
                android:icon="@drawable/ic_manage"
                android:orderInCategory="100"
                android:title="@string/mnu_mark"/>
            <item
                android:id="@+id/action_timer"
                android:icon="@drawable/ic_timer"
                android:orderInCategory="200"
                android:title="@string/mnu_timer"/>
            <item
                android:id="@+id/action_counter"
                android:icon="@drawable/ic_counter"
                android:orderInCategory="300"
                android:title="@string/mnu_counter"/>
            <item
                android:id="@+id/action_save"
                android:icon="@drawable/ic_save"
                android:orderInCategory="400"
                android:title="@string/mnu_save"/>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_about"
                android:orderInCategory="500"
                android:title="@string/mnu_about"/>
        </menu>
    </item>
</menu>