<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:padding="18dip"
            android:gravity="center"
            android:textColor="#33b5e5"
            android:textSize="46sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cmdStart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/cmd1" />

        <Button
            android:id="@+id/cmdStop"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/cmd2" />

        <Button
            android:id="@+id/cmdDismiss"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/cmd3" />
    </TableRow>
</TableLayout>